update on navigation css
fix speed between

--- a/webportstyle.css
+++ b/webportstyle.css
@@ -69,7 +69,7 @@ html {
     backdrop-filter: blur(10px);
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     position: sticky;
     top: 0;
     height: 10vh;
